--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -2,7 +2,7 @@ ion-content{
 background: linear-gradient(to bottom, #093637, #44a08d);
 }
 h2{
-  color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center
 }
