--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -1,5 +1,5 @@
 ion-content{
-background: linear-gradient(to bottom, #093637, #44a08d);
+background: linear-gradient(to bottom, #44a08d, #093637);
 }
 h2{
   color: black;
@@ -7,7 +7,7 @@ h2{
   text-align: center
 }
 p{
-  color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
   text-align: justify
 }
