--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -1,5 +1,5 @@
 ion-content{
-background: linear-gradient(to bottom, #44a08d, #093637);
+background: linear-gradient(to bottom, 	#EECDA3, #EF629F);
 }
 h2{
   color: black;
